--- a/templates/accounts/index.html
+++ b/templates/accounts/index.html
@@ -1,5 +1,5 @@
-{% extends "shared/base.html" %}
+{% extends "shared/base_with_sidebar.html" %}
 
-{% block body %}
+{% block main_page %}
  <p>Dashboard</p>
 {% endblock %}
