--- a/templates/payments/add_payment_method.html
+++ b/templates/payments/add_payment_method.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block body %}
-
-   <div class="card mt-4 bg-light">
-      <div class="card-body">
-        <h5 class="card-title">Make payment</h5>
-         <a href="#" id="press_stripe_payment">
-          <img class="bg-white rounded" src="{% static "stripe_payments/logo1.png" %}" alt="Logo" width="246" height="128">
-         </a>
-      </div>
-   </div>
-
+  <div class="container">
+     <div class="card mt-4 bg-light">
+        <div class="card-body">
+          <h5 class="card-title">Make payment</h5>
+           <a href="#" id="press_stripe_payment">
+            <img class="bg-white rounded" src="{% static "stripe_payments/logo1.png" %}" alt="Logo" width="246" height="128">
+           </a>
+        </div>
+     </div>
+  </div>
 {% endblock %}
