--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,21 +1,22 @@
 {% extends "shared/base.html" %}
-{% load static %}
 
 {% block body %}
-  <div class="row justify-content-center mt-5">
-    <div class="d-flex flex-column">
-      <div class="d-flex justify-content-center">
-        <img src="{% static "accounts/logo.webp" %}" alt="Logo" width="128" height="128">
-      </div>
-      <form action="{% url 'accounts:login' %}"  method="post" >
-        {% csrf_token %}
-        {{ form|crispy }}
+  <div class="container">
+    <div class="row justify-content-center mt-5">
+      <div class="d-flex flex-column">
+        <div class="d-flex justify-content-center">
+          <img src="{% static "accounts/logo.webp" %}" alt="Logo" width="128" height="128">
+        </div>
+        <form action="{% url 'accounts:login' %}"  method="post" >
+          {% csrf_token %}
+          {{ form|crispy }}
 
-        <input type="submit" class="btn btn-primary btn-block" value="Login">
-      </form>
+          <input type="submit" class="btn btn-primary btn-block" value="Login">
+        </form>
 
-      <div class="d-flex justify-content-center">
-        <p class="mt-3 text-muted">Stop losing clients in queues</p>
+        <div class="d-flex justify-content-center">
+          <p class="mt-3 text-muted">Stop losing clients in queues</p>
+        </div>
       </div>
     </div>
   </div>
