--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -5,6 +5,7 @@
     {% load static %}
     <!-- CSS only -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'shared/base.css' %}">
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -16,10 +17,8 @@
     {% endblock %}
   </head>
 
-  <body>
-    <div class="container">
-      {% block body %}
-      {% endblock %}
-    </div>
+  <body class="body-background">
+    {% block body %}
+    {% endblock %}
   </body>
 </html>
