--- a/templates/banners/queue.html
+++ b/templates/banners/queue.html
@@ -1,6 +1,7 @@
 {% extends "shared/base_with_sidebar.html" %}
 
 {% block main_page %}
+{% include 'banners/client_card.html' %}
   <div class="card rounded-15-px" style="width: 40rem">
   <div class="card-body">
     <div class="d-flex flex-row justify-content-between align-items-center">
@@ -10,30 +11,6 @@
   </div>
   <hr class="ml-3 mr-3 mb-0 mt-0">
   </div>
-<!-- 
-    <div class="card rounded-15-px" style="width: 40rem">
-  <div class="card-body">
-    <div class="d-flex flex-row justify-content-between align-items-center">
-      <p class="font-weight-bold mb-0">Banners</p>
-      {% include 'banners/create.html' %}
-    </div>
-  </div>
-  <hr class="ml-3 mr-3 mb-0 mt-0">
-  <div class="card-body">
-
-  <div class="d-flex flex-column">
-    {% for banner in banners %}
-      <a href="{{ banner.upload.url }}"
-         class="pb-2 pt-2 text-dark sidebar-item rounded-15-px text-decoration-none" download>
-        &nbsp; {{ banner.phone_number }}
-      </a>
-    {% endfor %}
-  </div>
-
-  </div>
-</div>
- -->
-
 
 
 {% endblock %}
