--- a/templates/shared/sidebar.html
+++ b/templates/shared/sidebar.html
@@ -12,7 +12,7 @@
         <a class="nav-link active text-dark" href="{% url 'banners:index' %}">Banners</a>
       </li>
       <li class="nav-item sidebar-item rounded-15-px">
-        <a class="nav-link active text-dark" href="{% url 'banners:queue' %}">Client manager</a>
+        <a class="nav-link active text-dark" href="{% url 'banners:index' %}">Client manager</a>
       </li>
     </ul>
   </div>
