--- a/templates/banners/index.html
+++ b/templates/banners/index.html
@@ -13,10 +13,19 @@
 
   <div class="d-flex flex-column">
     {% for banner in banners %}
+    <table>
+      <tr>
+        <td>
+    <a href="{{ banner.banner_id.queue }}"
+         class="pb-2 pt-2 text-dark sidebar-item rounded-15-px text-decoration-none">{{ banner.phone_number }}</a></td>
+         <td>
+    <!-- <p class="font-weight-bold mb-0">{{ banner.phone_number }}</p> -->
       <a href="{{ banner.upload.url }}"
          class="pb-2 pt-2 text-dark sidebar-item rounded-15-px text-decoration-none" download>
-        &nbsp; {{ banner.phone_number }}
-      </a>
+        &nbsp; Download<!-- {{ banner.phone_number }} -->
+      </a></td>
+    </tr>
+    </table>
     {% endfor %}
   </div>
 
