--- a/templates/banners/client.html
+++ b/templates/banners/client.html
@@ -1,9 +1,27 @@
-{% for client_phone_number in queue %}
-<div class="card-body">
-	<div class="d-flex flex-column">
-		<p class="font-weight-bold mb-0">{{ queue_item }}</p>
-		<p class="font-weight-bold mb-0">{{ client_phone_number }}</p>
-		<p class="font-weight-bold mb-0">{{ wpis.entry.lastChangeDate|date:'Y-m-d H:i' }}</p>
-	</div>
-</div>
-{% endfor %}
+<table>
+	{% for item in items %}
+      <tr>
+        <td>
+			<div class="card-body">
+				<div class="d-flex flex-column">
+				<p class="font-weight-bold mb-0">{{ item.id }})</p>
+				</div>
+			</div>
+		</td>
+		<td>
+			<div class="card-body">
+				<div class="d-flex flex-column">
+				<p class="font-weight-bold mb-0">{{ item.phone_number}}</p>
+				</div>
+			</div>
+		</td>
+    </tr>
+    {% endfor %}
+</table>
+
+<!--   <ul class="list-group list-group-flush">
+  	{% for item in items %}
+    <li class="list-group-item">{{ item.id }}) {{ item.phone_number}}</li>
+    {% endfor %}
+  </ul> -->
+
