--- a/templates/banners/queue.html
+++ b/templates/banners/queue.html
@@ -1,17 +1,24 @@
 {% extends "shared/base_with_sidebar.html" %}
-
 {% block main_page %}
-{% include 'banners/client_card.html' %}
+{% include 'banners/client_cards.html' %}
+
 
   <div class="card rounded-15-px" style="width: 40rem">
   <div class="card-body">
     <div class="d-flex flex-row justify-content-between align-items-center">
       <p class="font-weight-bold mb-0">Users manager</p>
-      {% include 'banners/client.html' %}
     </div>
+  </div>
+		<hr class="ml-3 mr-3 mb-0 mt-0">
+		<div class="card-body">
+		<div class="d-flex flex-column">
+		{% include 'banners/client.html' %}
+		</div>
+		</div>
+ 	</div>
   </div>
   <hr class="ml-3 mr-3 mb-0 mt-0">
   </div>
 
-
 {% endblock %}
+
