Changes in layout.

--- a/templates/banners/client.html
+++ b/templates/banners/client.html
@@ -1,27 +1,6 @@
-<table>
-	{% for item in items %}
-      <tr>
-        <td>
-			<div class="card-body">
-				<div class="d-flex flex-column">
-				<p class="font-weight-bold mb-0">{{ item.id }})</p>
-				</div>
-			</div>
-		</td>
-		<td>
-			<div class="card-body">
-				<div class="d-flex flex-column">
-				<p class="font-weight-bold mb-0">{{ item.phone_number}}</p>
-				</div>
-			</div>
-		</td>
-    </tr>
-    {% endfor %}
-</table>
-
-<!--   <ul class="list-group list-group-flush">
+  <ul class="list-group list-group-flush">
   	{% for item in items %}
     <li class="list-group-item">{{ item.id }}) {{ item.phone_number}}</li>
     {% endfor %}
-  </ul> -->
+  </ul>
 
