--- a/templates/banners/queue.html
+++ b/templates/banners/queue.html
@@ -1,12 +1,20 @@
 {% extends "shared/base_with_sidebar.html" %}
 {% block main_page %}
-{% include 'banners/client_cards.html' %}
+
 
 
   <div class="card rounded-15-px" style="width: 40rem">
   <div class="card-body">
     <div class="d-flex flex-row justify-content-between align-items-center">
-      <p class="font-weight-bold mb-0">Users manager</p>
+      <p class="font-weight-bold mb-0">Users manager</p> 
+        <form action=""  method="post" >
+          {% csrf_token %}
+          <input type="submit" class="btn btn-primary btn-block" value="Next">
+        </form>
+        <form action=""  method="post" >
+          {% csrf_token %}
+          <input type="submit" class="btn btn-primary btn-block" value="Skip">
+        </form>
     </div>
   </div>
 		<hr class="ml-3 mr-3 mb-0 mt-0">
