--- a/templates/banners/client.html
+++ b/templates/banners/client.html
@@ -1,6 +1,5 @@
   <ul class="list-group list-group-flush">
-  	{% for item in items %}
-    <li class="list-group-item">{{ item.id }}) {{ item.phone_number}}</li>
+  	{% for client in clients %}
+    <li class="list-group-item">{{ client.id }}) {{ client.phone_number}}</li>
     {% endfor %}
   </ul>
-
