--- a/templates/banners/index.html
+++ b/templates/banners/index.html
@@ -1,25 +1,24 @@
 {% extends "shared/base_with_sidebar.html" %}
-
 {% block main_page %}
+
   <div class="card rounded-15-px" style="width: 40rem">
   <div class="card-body">
-    <div class="d-flex flex-row justify-content-between align-items-center">
+    <div class="d-flex flex-row justify-content-between align-items-top">
       <p class="font-weight-bold mb-0">Banners</p>
       {% include 'banners/create.html' %}
     </div>
   </div>
   <hr class="ml-3 mr-3 mb-0 mt-0">
+
   <div class="card-body">
-
   <div class="d-flex flex-column">
-
   <ul class="list-group list-group-flush">
     {% for banner in banners %}
     <li class="list-group-item">
     <a href="{% url 'banners:queue' banner.id %}"
          class="pb-2 pt-2 text-dark sidebar-item rounded-15-px text-decoration-none">{{ banner.phone_number }}</a>
       <a href="{{ banner.upload.url }}"
-         class="pb-2 pt-2 text-dark sidebar-item rounded-15-px text-decoration-none" download>
+         class="pb-2 pt-2 text-dark sidebar-item rounded-15-px text-decoration-none float-lg-right" download>
         &nbsp; Download
       </a></li>
     {% endfor %}
