--- a/templates/banners/queue.html
+++ b/templates/banners/queue.html
@@ -1,30 +1,30 @@
 {% extends "shared/base_with_sidebar.html" %}
 {% block main_page %}
 
-
   <div class="card rounded-15-px" style="width: 40rem">
-  <div class="card-body">
-    <div class="d-flex flex-row justify-content-between align-items-center">
-      <p class="font-weight-bold mb-0">Users manager</p> 
-        <form action=""  method="post" >
-          {% csrf_token %}
-          <input type="submit" class="btn btn-primary btn-block" value="Next">
-        </form>
-        <form action=""  method="post" >
-          {% csrf_token %}
-          <input type="submit" class="btn btn-primary btn-block" value="Skip">
-        </form>
-    </div>
-  </div>
-		<hr class="ml-3 mr-3 mb-0 mt-0">
-		<div class="card-body">
-		<div class="d-flex flex-column">
-		{% include 'banners/client.html' %}
-		</div>
-		</div>
- 	</div>
-  </div>
-  <hr class="ml-3 mr-3 mb-0 mt-0">
-  </div>
+    <div class="card-body">
+      <div class="d-flex flex-row justify-content-between align-items-top">
+        <p class="font-weight-bold mb-0">Users manager</p>
+              <div class="btn-group" role="group" aria-label="Basic example">
+              <form action=""  method="post" class="mr-2">
+                {% csrf_token %}
+                <input type="submit" class="btn btn-primary btn-block" value="Next">
+              </form>
+              <form action=""  method="post">
+                {% csrf_token %} 
+                <input type="submit" class="btn btn-primary btn-block" value="Skip">
+              </form>
+              </div>
+      </div>
+      </div>
+      <hr class="ml-3 mr-3 mb-0 mt-0">
 
+    <div class="card-body">
+        <div class="d-flex flex-column">
+          <ul class="list-group list-group-flush" style="list-style: none;">
+              {% include 'banners/client.html' %}
+           </ul>
+        </div>
+    </div>
+</div>
 {% endblock %}
