--- a/templates/banners/client.html
+++ b/templates/banners/client.html
@@ -1,9 +1,9 @@
- {% load time %}
-
 {% for client in clients %}
-<li class="list-group-item">{{ client.id }}) {{ client.phone_number}}
 
-	<!-- <p>Waiting time of {{ client.current_time }}_ minutes {{ client.time }}</p> -->
+<li class="list-group-item">
+	<div class="d-inline mr-4 float-lg-left">{{ client.position }}</div>
+	<div class="d-inline mr-2">{{ client.phone_number }}</div>
+	<div class="d-inline float-lg-right">Waiting time of _ minutes
 </li>
 {% endfor %}
  
