Сorrection of positions and status display.

--- a/templates/banners/queue.html
+++ b/templates/banners/queue.html
@@ -22,7 +22,7 @@
     <div class="card-body">
         <div class="d-flex flex-column">
           <ul class="list-group list-group-flush" style="list-style: none;">
-              {% include 'banners/client.html' %}
+              {% include 'banners/queue_items.html' %}
            </ul>
         </div>
     </div>
