add a flash message to the banner creation

--- a/templates/shared/base_with_sidebar.html
+++ b/templates/shared/base_with_sidebar.html
@@ -2,6 +2,7 @@
 
 {% block body %}
   <div class="container">
+    {% include 'shared/messages.html' %}
     <div class="d-flex flex-row mt-5">
       {% include 'shared/sidebar.html' %}
 
