--- a/templates/shared/base_with_sidebar.html
+++ b/templates/shared/base_with_sidebar.html
@@ -3,7 +3,7 @@
 {% block body %}
   <div class="container">
     {% include 'shared/messages.html' %}
-    <div class="d-flex flex-row mt-5">
+    <div class="d-flex flex-row mt-5 align-items-start">
       {% include 'shared/sidebar.html' %}
 
       <div class="d-flex flex-column ml-3">
