--- a/templates/accounts/activate_mail.html
+++ b/templates/accounts/activate_mail.html
@@ -489,7 +489,7 @@
 }</style></head>
     <body>
         <!--*|IF:MC_PREVIEW_TEXT|*-->
-        <!--[if !gte mso 9]><!----><span class="mcnPreviewText" style="display:none; font-size:0px; line-height:0px; max-height:0px; max-width:0px; opacity:0; overflow:hidden; visibility:hidden; mso-hide:all;">*|MC_PREVIEW_TEXT|*</span><!--<![endif]-->
+        <!--[if !gte mso 9]><!----><span class="mcnPreviewText" style="display:none; font-size:0px; line-height:0px; max-height:0px; max-width:0px; opacity:0; overflow:hidden; visibility:hidden; mso-hide:all;"></span><!--<![endif]-->
         <!--*|END:IF|*-->
         <center>
             <table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
@@ -972,22 +972,17 @@
 
                             <em>Copyright © *|CURRENT_YEAR|* *|LIST:COMPANY|*, All rights reserved.</em>
 <br>
-*|IFNOT:ARCHIVE_PAGE|*
-    *|LIST:DESCRIPTION|*
     <br>
     <br>
     <strong>Our mailing address is:</strong>
     <br>
-    *|HTML:LIST_ADDRESS_HTML|* *|END:IF|*
+      hello@qlapse.com
     <br>
     <br>
 	Want to change how you receive these emails?<br>
     You can <a href="*|UPDATE_PROFILE|*">update your preferences</a> or <a href="*|UNSUB|*">unsubscribe from this list</a>.
     <br>
     <br>
-    *|IF:REWARDS|* *|HTML:REWARDS|*
-*|END:IF|*
-
                         </td>
                     </tr>
                 </tbody></table>
