--- a/templates/accounts/activate_mail.html
+++ b/templates/accounts/activate_mail.html
@@ -970,7 +970,7 @@
 
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-                            <em>Copyright © *|CURRENT_YEAR|* *|LIST:COMPANY|*, All rights reserved.</em>
+                            <em>Copyright © 2021 Qlapse, All rights reserved.</em>
 <br>
     <br>
     <br>
