--- a/templates/banners/queue_entrypoint.html
+++ b/templates/banners/queue_entrypoint.html
@@ -1,11 +1,12 @@
 {% extends "shared/base.html" %}
 {% load static %}
+{% load queue_filters %}
 
 {% block body %}
   <div class="container">
     <div class="d-flex flex-row mt-5 flex-column">
       <div class="d-flex flex-column mb-5">
-        <p class="display-4">Approximate time to wait: </p>
+        <p class="display-4">Approximate time to wait: {{ time_estimation|waiting_time_formatter }}</p>
         <p class="display-2 font-weight-bold">10m.</p>
       </div>
       <div class="d-flex flex-column mb-5">
